- A new global setting is now available that can toggle whether or not scraped text from PDF files is automatically inserted as Notes for items newly added to a character.
- XPath 1.0 functions like ceiling() and floor() are now properly supported in all fields that work off of the document-invariant XPath processor.
- Having multiple conditional bonuses to the same skill now only makes the greatest conditional bonus show up in the skill pool's modified rating.
- Corrupted save data for Cyber-Singularity Seeker and/or Redliner can no longer cause duplicates to be generated for their bonuses.
- Characters can now have contacts with a total connection plus loyalty that is greater than 7 at character creation if they also have something that lowers said contacts' cost to 7 karma or lower.
- When being prompted to select a tradition, an action, or a to-be-disabled skill group, the prompt is no longer automatically filled with a string of seemingly random numbers and letters.
- Fixed Metamagics/Echos not correctly showing why they cannot be taken in the Select Metamagic window. Closes #4973
- Fixed Source for metamagics/echoes not being visible when selected in the Initation/Submersion window. Closes #4974
- When an adept tries buying a mentor spirit that lets them choose between multiple adept powers and at least one of those choices is for an adept power with levels that the adept already has, the program now properly allows the adept to choose one of those powers regardless to increase their level in that power.
- Potential issues with initiation and/or submersion grades not increasing after the first initiation/submersion have been fixed.
- Exotic skills that a character has not learned can now be properly selected for activesofts, hardwires, and any other item that can grant a user access to a skill. Part of #4983.